# axon

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/axon/: __init__.py  agent.py  config.py  constants.py  main.py  repl.py  session.py  setup.py  usage.py
src/axon/commands/: __init__.py  clear.py  dump.py  help.py  model.py  usage.py  yolo.py
src/axon/core/: agent.py  messages.py  repl.py  usage.py
src/axon/mcp/: __init__.py  agent.py  servers.py
src/axon/prompts/: system.txt
src/axon/tools/: common.py  find.py  git.py  list.py  read_file.py  run_command.py  update_file.py  wrapper.py  write_file.py
src/axon/ui/: __init__.py  colors.py  core.py  formatting.py  manager.py  special.py  spinner.py
src/axon/utils/: error.py  guide.py  input.py  logger.py
