[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-cli"
description = "Your agentic CLI developer."
keywords = ["cli", "agent", "development", "automation"]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Gavin Vickery", email = "gavin@geekforbrains.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic-ai",
    "rich",
    "typer",
    "prompt_toolkit",
]

[project.scripts]
axon = "axon:app"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/geekforbrains/axon-cli"
Repository = "https://github.com/geekforbrains/axon-cli"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
